# agora-etl-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/agora_rs/: __init__.py  _core.pyi
src/: lib.rs
tests/: test_agora_integration.py  test_linear_batch_buffer.py  test_metrics_accumulator.py  test_record_buffer.py
