[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[project]
name = "agora-etl-rs"
version = "0.1.0"
description = "Rust acceleration layer for agora-etl — high-throughput record dispatch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Tham Tra" }]
keywords = ["etl", "pipeline", "async", "rust", "performance", "data-engineering"]
dependencies = ["agora-etl>=0.2.0,<1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://www.agora.my-working.com/"
Repository = "https://github.com/thanhtham010891/agora-etl"
Documentation = "https://www.agora.my-working.com/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "agora_rs._core"
